# api/api/swagger/swagger.yaml
@@ -89,107 +89,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /movie:
-    # our controller name
-    x-swagger-router-controller: movie
-    get:
-      operationId: getAll
-      description: get the movies list
-      # define the type of response for Success "200" and Error
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetMoviesListResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    post:
-      operationId: save
-      description: add a new movie to the list
-      # movie info to be stored
-      parameters:
-        - name: title
-          description: Movie properties
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Movie"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /movie/{id}:
-    # our controller name
-    x-swagger-router-controller: movie
-    get:
-      operationId: getOne
-      description: get a movie
-      # define the type of response for Success "200" and Error
-      parameters:
-        - name: id
-          type: string
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetMovieResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      operationId: update
-      description: update a movie
-      # define the parameters
-      parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
-          required: true
-        - name: title
-          description: Movie properties
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Movie"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    delete:
-      operationId: delMovie
-      description: delete a movie
-      # define the parameters
-      parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
+  
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -210,15 +110,18 @@ definitions:
       - game_id
       - guesses_remaining
       - state
+      - number_of_letters
     properties:
         game_id:
-          type: integer
+          type: string
         guesses_remaining:
           type: integer
           description: number of guesses remaining before the game ends in a failed state
         state:
           type: string
           description: String representing the state of the game. Known letters are represented appropriately; unknown letters are represented as underscores.
+        number_of_letters:
+          type: integer
   GetGameListResponse:
     required:
       - games
@@ -231,62 +134,10 @@ definitions:
           properties:
             game_id:
               type: string
-            guess_remaining:
+            guesses_remaining:
               type: integer
             state:
               type: string
-  GetMoviesListResponse:
-      required:
-        - movies
-      properties:
-        # The array of movies
-        movies:
-          type: array
-          items:
-            type: object
-            properties:
-              id:
-                type: string
-              title:
-                type: string
-              year:
-                type: number
-  GetMovieResponse:
-    required:
-      - id
-      - title
-      - year
-    properties:
-      id:
-        type: string
-      title:
-        type: string
-      year:
-        type: number
-  Movie:
-    type: object
-    properties:
-      title:
-        type: string
-        description: task object name
-      year:
-        type: number
-        description: task description
-    required:
-      - title
-      - year
-  GeneralResponse:
-    type: object
-    properties:
-      success:
-        type: number
-        description: returns 1 if successful
-      description:
-        type: string
-        description: a short comment
-    required:
-      - success
-      - description
   ErrorResponse:
     required:
       - message
